# cookiecutter-ansible-boilerplate

./: LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .editorconfig  .gitignore  README.md  pyproject.toml
